Small tweak